--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
