--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test-month": "NODE_ENV=dev mocha api/monthly/monthly.spec.js",
+    "test-monthly": "NODE_ENV=test mocha api/monthly/monthly.spec.js -w",
     "start": "node bin/www.js"
   },
   "repository": {
