refactor create function
then -> async/await

--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test-monthly": "NODE_ENV=test mocha api/monthly/monthly.spec.js -w",
+    "test-daily": "NODE_ENV=test mocha api/daily/daily.spec.js -w",
     "start": "node bin/www.js"
   },
   "repository": {
