--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "piece-collector",
+  "name": "piece-collector-server",
   "version": "0.0.1",
   "description": "",
   "main": "app.js",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/editaahn/piece-collector#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
