--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,15 @@
   },
   "homepage": "https://github.com/editaahn/piece-collector#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-kakao": "^1.0.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
